plataforma/bootstrap/vault/argocd-vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: platform-vault
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
    paths:
    - path: /vault
      pathType: Prefix
      backend:
        service:
          name: hashicorp-vault-ui
          port:
            number: 8200
