plataforma/bootstrap/vault/argocd2-vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: platform-vault
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /vault/$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - http:
      paths:
      - path: /vault(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: hashicorp-vault-ui
            port:
              number: 8200
